2008-05-27  Jeffrey Stedfast  <fejj@novell.com>

	* examples/basic-example.c: Fixed to use GMimeSignatureValidity.

	* gmime/gmime-cipher-context.c (g_mime_cipher_*): Removed, since
	we're not going to maintain compatability with 2.2, no sense
	keeping these wrappers around.
	(g_mime_cipher_validity_*): Removed. No one should still be using
	these...

2008-05-26  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message.c (g_mime_message_get_body): Removed.

	* gmime/gmime-disposition.c: Changed GMimeDisposition to
	GMimeContentDisposition and updated method names to match.
	(g_mime_content_disposition_new_from_string): Same as the old
	g_mime_disposition_new().
	(g_mime_content_disposition_new): New ctor that doesn't take any
	args.
	(g_mime_content_disposition_set_parameter): Renamed from
	g_mime_disposition_add_parameter().
	(g_mime_content_disposition_get_disposition): Renamed from
	g_mime_disposition_get().
	(g_mime_content_disposition_set_disposition): Renamed from
	g_mime_disposition_set().

	* gmime/gmime-object.c: Moved Content-Disposition handling here.
	(g_mime_object_get_content_disposition): New method which is the
	equivalent of g_mime_part_get_content_disposition_object().
	(g_mime_object_set_content_disposition): New method which is the
	equivalent of g_mime_part_set_content_disposition_object().
	(g_mime_object_get_disposition): New method which is the
	equivalent of g_mime_part_get_content_disposition().
	(g_mime_object_set_disposition): New method which is the
	equivalent of g_mime_part_set_content_disposition().
	(g_mime_object_get_content_disposition_parameter): New method
	which is the equivalent of
	g_mime_part_get_content_disposition_parameter().
	(g_mime_object_set_content_disposition_parameter): New method
	which is the equivalent of
	g_mime_part_add_content_disposition_parameter().

	* gmime/gmime-part.c (g_mime_part_get_content_disposition_object):
	Moved functionality to GMimeObject.