@@ -31,20 +31,24 @@ struct _GMimeContentType {
 	char *type;
 	char *subtype;
 	
-	GMimeParam *params;
 	GHashTable *param_hash;
+	GMimeParam *params;
 };
 
 typedef struct _GMimeContentType GMimeContentType;
 
 GMimeContentType *g_mime_content_type_new (const char *type, const char *subtype);
-GMimeContentType *g_mime_content_type_new_from_string (const char *string);
+GMimeContentType *g_mime_content_type_new_from_string (const char *str);
 
 void g_mime_content_type_destroy (GMimeContentType *mime_type);
 
 char *g_mime_content_type_to_string (const GMimeContentType *mime_type);
 
 gboolean g_mime_content_type_is_type (const GMimeContentType *mime_type, const char *type, const char *subtype);
+
+const char *g_mime_content_type_get_media_type (const GMimeContentType *mime_type);
+const char *g_mime_content_type_get_media_subtype (const GMimeContentType *mime_type);
+const GMimeParam *g_mime_content_type_get_params (const GMimeContentType *mime_type);
 
 void g_mime_content_type_set_parameter (GMimeContentType *mime_type, const char *attribute, const char *value);
 const char *g_mime_content_type_get_parameter (const GMimeContentType *mime_type, const char *attribute);
